* app/widgets/gimppreviewrenderer-utils.c * app/widgets/gimppreviewrenderer-utils.h * app/widgets/gimppreviewrendererbrush.c * app/widgets/gimppreviewrendererbrush.h * app/widgets/gimppreviewrendererdrawable.c * app/widgets/gimppreviewrendererdrawable.h * app/widgets/gimppreviewrenderergradient.c * app/widgets/gimppreviewrenderergradient.h * app/widgets/gimppreviewrendererimage.c * app/widgets/gimppreviewrendererimage.h * app/widgets/gimppreviewrendererimagefile.c * app/widgets/gimppreviewrendererimagefile.h * app/widgets/gimppreviewrendererlayer.c * app/widgets/gimppreviewrendererlayer.h * app/widgets/gimppreviewrenderervectors.c * app/widgets/gimppreviewrenderervectors.h: Renamed all these files...
* app/widgets/gimpviewrenderer-utils.c
* app/widgets/gimpviewrenderer-utils.h
* app/widgets/gimpviewrendererbrush.c
* app/widgets/gimpviewrendererbrush.h
* app/widgets/gimpviewrendererdrawable.c
* app/widgets/gimpviewrendererdrawable.h
* app/widgets/gimpviewrenderergradient.c
* app/widgets/gimpviewrenderergradient.h
* app/widgets/gimpviewrendererimage.c
* app/widgets/gimpviewrendererimage.h
* app/widgets/gimpviewrendererimagefile.c
* app/widgets/gimpviewrendererimagefile.h
* app/widgets/gimpviewrendererlayer.c
* app/widgets/gimpviewrendererlayer.h
* app/widgets/gimpviewrenderervectors.c
* app/widgets/gimpviewrenderervectors.h: ... to these names. And also
  changed all the GimpPreviewRenderer* types to GimpViewRenderer* ones.

* app/tools/gimppaintoptions-gui.c

* app/widgets/Makefile.am
* app/widgets/gimpcomponenteditor.c
* app/widgets/gimpfiledialog.c
* app/widgets/gimpgradienteditor.c
* app/widgets/gimpview.c
* app/widgets/widgets-types.h
* app/widgets/gimpviewrenderer.c
* app/widgets/gimpviewrenderer.h: modified accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14495 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -188,22 +188,6 @@ libappwidgets_a_sources = \
 	gimppdbdialog.h			\
 	gimppluginaction.c		\
 	gimppluginaction.h		\
-	gimppreviewrenderer-utils.c	\
-	gimppreviewrenderer-utils.h	\
-	gimppreviewrendererbrush.c	\
-	gimppreviewrendererbrush.h	\
-	gimppreviewrendererdrawable.c	\
-	gimppreviewrendererdrawable.h	\
-	gimppreviewrenderergradient.c	\
-	gimppreviewrenderergradient.h	\
-	gimppreviewrendererimage.c	\
-	gimppreviewrendererimage.h	\
-	gimppreviewrendererimagefile.c	\
-	gimppreviewrendererimagefile.h	\
-	gimppreviewrendererlayer.c	\
-	gimppreviewrendererlayer.h	\
-	gimppreviewrenderervectors.c	\
-	gimppreviewrenderervectors.h	\
 	gimpprogressbox.c		\
 	gimpprogressbox.h		\
 	gimpprogressdialog.c		\
@@ -264,6 +248,22 @@ libappwidgets_a_sources = \
 	gimpviewabledialog.h		\
 	gimpviewrenderer.c		\
 	gimpviewrenderer.h		\
+	gimpviewrenderer-utils.c	\
+	gimpviewrenderer-utils.h	\
+	gimpviewrendererbrush.c		\
+	gimpviewrendererbrush.h		\
+	gimpviewrendererdrawable.c	\
+	gimpviewrendererdrawable.h	\
+	gimpviewrenderergradient.c	\
+	gimpviewrenderergradient.h	\
+	gimpviewrendererimage.c 	\
+	gimpviewrendererimage.h 	\
+	gimpviewrendererimagefile.c	\
+	gimpviewrendererimagefile.h	\
+	gimpviewrendererlayer.c		\
+	gimpviewrendererlayer.h		\
+	gimpviewrenderervectors.c	\
+	gimpviewrenderervectors.h	\
 	gimpwidgets-constructors.c	\
 	gimpwidgets-constructors.h	\
 	gimpwidgets-utils.c		\
