* app/widgets/gimpnavigationpreview.c * app/widgets/gimpnavigationpreview.h: renamed these files to ...
* app/widgets/gimpnavigationview.c
* app/widgets/gimpnavigationview.h: to these.
  And renamed the GimpNavigationPreview type to GimpNavigationView.

Hopefully, this is the last change in file names for the Preview->View
renaming process.

* app/display/gimpnavigationeditor.c

* app/widgets/Makefile.am
* app/widgets/widgets-types.h: Changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14504 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -174,8 +174,8 @@ libappwidgets_a_sources = \
 	gimpmenufactory.h		\
 	gimpmessagebox.c		\
 	gimpmessagebox.h		\
-	gimpnavigationpreview.c		\
-	gimpnavigationpreview.h		\
+	gimpnavigationview.c		\
+	gimpnavigationview.h		\
 	gimppaletteeditor.c		\
 	gimppaletteeditor.h		\
 	gimppaletteselect.c		\
