2004-08-27  Michael Natterer  <mitch@gimp.org>
	Moved the gimp_progress_init() and gimp_progress_update() PDB
	functions to their own group because they don't belong to the
	"Plug-In" namespace and will soon get more functions.

	* tools/pdbgen/pdb/plug_in.pdb: removed the progress stuff...

	* tools/pdbgen/pdb/progress.pdb: ...and added it here.

	* tools/pdbgen/Makefile.am
	* tools/pdbgen/groups.pl
	* app/pdb/Makefile.am
	* libgimp/Makefile.am: changed accordingly.

	* libgimp/gimpprogress_pdb.[ch]: new generated files.

	* app/pdb/internal_procs.c
	* app/pdb/plug_in_cmds.c
	* libgimp/gimp_pdb.h
	* libgimp/gimpplugin_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14506 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/pdb/Makefile.am
+++ b/app/pdb/Makefile.am
@@ -41,6 +41,7 @@ libapppdb_a_SOURCES = \
 	pdb-types.h		\
 	plug_in_cmds.c		\
 	procedural_db_cmds.c	\
+	progress_cmds.c		\
 	selection_cmds.c	\
 	selection_tools_cmds.c	\
 	text_tool_cmds.c	\
