* libgimpwidgets/gimppreview.c * libgimpwidgets/gimppreview.h: added a GimpPreview widget, abstract   base for a GimpDrawablePreview.
* libgimpwidgets/Makefile.am
* libgimpwidgets/gimpwidgets.h
* libgimpwidgets/gimpwidgetstypes.h: modified accordingly.

* libgimp/gimpdrawablepreview.c
* libgimp/gimpdrawablepreview.h: added a GimpDrawablePreview widget
  to ease	the use of previews by plug-ins.

* libgimp/Makefile.am
* libgimp/gimpui.h: Changed accordingly.

* plug-ins/common/despeckle.c
* plug-ins/common/gauss.c
* plug-ins/common/neon.c
* plug-ins/common/sobel.c
* plug-ins/common/softglow.c
* plug-ins/common/spread.c
* plug-ins/common/unsharp.c: use a GimpDrawablePreview with these plug-ins.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14545 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -210,6 +210,8 @@ libgimpui_2_0_la_SOURCES = \
 	gimpmenu.h		\
 	gimpbrushmenu.c		\
 	gimpbrushmenu.h		\
+	gimpdrawablepreview.c	\
+	gimpdrawablepreview.h	\
 	gimpfontmenu.c		\
 	gimpfontmenu.h		\
 	gimpgradientmenu.c 	\
@@ -255,6 +257,7 @@ gimpinclude_HEADERS = \
 	gimpuitypes.h		\
 	gimpmenu.h		\
 	gimpbrushmenu.h		\
+	gimpdrawablepreview.h   \
 	gimpfontmenu.h		\
 	gimpgradientmenu.h	\
 	gimppalettemenu.h	\
