--- a/devel-docs/libgimp/Makefile.am
+++ b/devel-docs/libgimp/Makefile.am
@@ -43,8 +43,20 @@ extra_files =
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
 # if $(DOC_MODULE).types is non-empty.
-GTKDOC_CFLAGS =
-GTKDOC_LIBS =
+GTKDOC_CFLAGS = \
+	@CFLAGS@		\
+	-I$(top_srcdir) 	\
+	-I$(top_builddir) 	\
+	@GTK_CFLAGS@
+
+GTKDOC_LIBS = \
+        $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la        \
+        $(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la      \
+        $(top_builddir)/libgimpmath/libgimpmath-$(GIMP_API_VERSION).la        \
+        $(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la  \
+        $(top_builddir)/libgimp/libgimp-$(GIMP_API_VERSION).la		      \
+        $(top_builddir)/libgimp/libgimpui-$(GIMP_API_VERSION).la	      \
+	@GTK_LIBS@
 
 GTKDOC_CC = $(LIBTOOL) --mode=compile $(CC)
 GTKDOC_LD = $(LIBTOOL) --mode=link $(CC)
