2004-08-31  Michael Natterer  <mitch@gimp.org>
	* plug-ins/script-fu/script-fu-scripts.[ch]: removed the GUI code...
	Also did some minor cleanups.

	* plug-ins/script-fu/script-fu-interface.[ch]: ...and added it here.

	* plug-ins/script-fu/script-fu-types.h: new file keeping the
	various struct defs needed by both the above files.

	* plug-ins/script-fu/Makefile.am
	* plug-ins/script-fu/siod-wrapper.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14565 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/script-fu/Makefile.am
+++ b/plug-ins/script-fu/Makefile.am
@@ -22,6 +22,8 @@ script_fu_SOURCES = \
 	script-fu.c			\
 	script-fu-console.c		\
 	script-fu-console.h		\
+	script-fu-interface.c		\
+	script-fu-interface.h		\
 	script-fu-text-console.h	\
 	script-fu-text-console.c	\
 	script-fu-constants.c		\
@@ -31,6 +33,7 @@ script_fu_SOURCES = \
 	script-fu-scripts.h		\
 	script-fu-server.c		\
 	script-fu-server.h		\
+	script-fu-types.h		\
 	script-fu-enums.h		\
 	siod-wrapper.c			\
 	siod-wrapper.h
