2004-08-31  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreview.c: removed the hardcoded preview size,
	removed some redundant assertions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14566 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/POTFILES.in
+++ b/po-script-fu/POTFILES.in
@@ -2,6 +2,7 @@
 # marked to allow runtime translation of messages
 
 plug-ins/script-fu/script-fu-console.c
+plug-ins/script-fu/script-fu-interface.c
 plug-ins/script-fu/script-fu-scripts.c
 plug-ins/script-fu/script-fu-server.c
 plug-ins/script-fu/script-fu-text-console.c
