2004-09-01  Michael Natterer  <mitch@gimp.org>
	* libgimp/Makefile.am
	* libgimp/gimpui.h
	* libgimp/gimpuitypes.h
	* libgimp/gimpprogressbar.[ch]: new widget GimpProgressBar which
	automatically redirects any progress calls to itself while
	it exists.

	* plug-ins/script-fu/script-fu-interface.c: removed all progress
	callback and simply use a GimpProgressBar.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14583 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -226,6 +226,8 @@ libgimpui_2_0_la_SOURCES = \
 	gimpimagecombobox.h	\
 	gimppixbuf.c		\
 	gimppixbuf.h		\
+	gimpprogressbar.c	\
+	gimpprogressbar.h	\
 	gimpexport.c		\
 	gimpexport.h
 
@@ -263,6 +265,7 @@ gimpinclude_HEADERS = \
 	gimppalettemenu.h	\
 	gimppatternmenu.h	\
 	gimppixbuf.h		\
+	gimpprogressbar.h	\
 	gimpdrawablecombobox.h	\
 	gimpimagecombobox.h	\
 	gimpexport.h
