2004-09-03  Sven Neumann  <sven@gimp.org>
	* libgimpbase/Makefile.am
	* libgimpbase/gimpchecks.[ch] added gimp_checks_get_shades().

	* app/base/temp-buf.c
	* app/display/gimpdisplayshell-render.c
	* libgimpwidgets/gimppreviewarea.c: use the new function instead
	of replicating these numbers in three different places.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14602 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpbase/Makefile.am
+++ b/libgimpbase/Makefile.am
@@ -76,6 +76,8 @@ libgimpbase_sources = \
 	\
 	gimpbase-private.c	\
 	gimpbase-private.h	\
+	gimpchecks.c           	\
+	gimpchecks.h           	\
 	gimpdatafiles.c		\
 	gimpdatafiles.h		\
 	gimpenv.c		\
@@ -111,6 +113,7 @@ libgimpbaseinclude_HEADERS = \
 	gimplimits.h		\
 	gimpversion.h		\
 	\
+	gimpchecks.h		\
 	gimpdatafiles.h		\
 	gimpenv.h		\
 	gimpmemsize.h		\
