2004-09-05  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added libgimpwidgets/gimppreviewarea.c.

	* de.po: updated german translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14630 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -27,6 +27,7 @@ libgimpwidgets/gimpintstore.c
 libgimpwidgets/gimpmemsizeentry.c
 libgimpwidgets/gimppatheditor.c
 libgimpwidgets/gimppickbutton.c
+libgimpwidgets/gimppreviewarea.c
 libgimpwidgets/gimppreview.c
 libgimpwidgets/gimpquerybox.c
 libgimpwidgets/gimpstock.c
