2004-09-07  Michael Natterer  <mitch@gimp.org>
	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]: applied a heavily modified
	patch from David Gowers which adds actions to modify the context's
	paint_mode. Fixes bug #151471.

	* menus/image-menu.xml.in: added them to the (commentd out)
	"Context" submenu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14658 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -46,6 +46,12 @@
         <menuitem action="context-opacity-decrease" />
         <menuitem action="context-opacity-increase" />
       </menu>
+      <menu action="context-paint-mode-menu" name="Paint Mode">
+        <menuitem action="context-paint-mode-first" />
+        <menuitem action="context-paint-mode-last" />
+        <menuitem action="context-paint-mode-previous" />
+        <menuitem action="context-paint-mode-next" />
+      </menu>
       <separator />
       <menu action="context-brush-menu" name="Brush">
         <menuitem action="context-brush-select-first" />
