--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -121,28 +121,28 @@ app/core/gimpselection.c
 app/core/gimptemplate.c
 app/core/gimpunit.c
 
-app/gui/about-dialog.c
-app/gui/color-dialog.c
-app/gui/convert-dialog.c
-app/gui/dialogs-constructors.c
-app/gui/file-open-dialog.c
-app/gui/file-open-location-dialog.c
-app/gui/file-save-dialog.c
-app/gui/grid-dialog.c
-app/gui/image-new-dialog.c
-app/gui/info-dialog.c
-app/gui/info-window.c
-app/gui/module-dialog.c
-app/gui/offset-dialog.c
-app/gui/palette-import-dialog.c
-app/gui/preferences-dialog.c
-app/gui/quit-dialog.c
-app/gui/resize-dialog.c
-app/gui/resolution-calibrate-dialog.c
-app/gui/stroke-dialog.c
-app/gui/tips-dialog.c
-app/gui/tips-parser.c
-app/gui/user-install-dialog.c
+app/dialogs/about-dialog.c
+app/dialogs/color-dialog.c
+app/dialogs/convert-dialog.c
+app/dialogs/dialogs-constructors.c
+app/dialogs/file-open-dialog.c
+app/dialogs/file-open-location-dialog.c
+app/dialogs/file-save-dialog.c
+app/dialogs/grid-dialog.c
+app/dialogs/image-new-dialog.c
+app/dialogs/info-dialog.c
+app/dialogs/info-window.c
+app/dialogs/module-dialog.c
+app/dialogs/offset-dialog.c
+app/dialogs/palette-import-dialog.c
+app/dialogs/preferences-dialog.c
+app/dialogs/quit-dialog.c
+app/dialogs/resize-dialog.c
+app/dialogs/resolution-calibrate-dialog.c
+app/dialogs/stroke-dialog.c
+app/dialogs/tips-dialog.c
+app/dialogs/tips-parser.c
+app/dialogs/user-install-dialog.c
 
 app/display/display-enums.c
 app/display/gimpdisplay.c
