2004-09-14  Michael Natterer  <mitch@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpviewrendererbuffer.[ch]: added a view renderer
	which knows how to preserve a GimpBuffer's aspect ratio if the
	view's aspect ratio is different.

	* app/widgets/gimpviewrenderer-utils.c
	(gimp_view_renderer_type_from_viewable_type): use it for viewables
	of type GimpBuffer. Fixes bug #152531


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14726 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -252,6 +252,8 @@ libappwidgets_a_sources = \
 	gimpviewrenderer-utils.h	\
 	gimpviewrendererbrush.c		\
 	gimpviewrendererbrush.h		\
+	gimpviewrendererbuffer.c	\
+	gimpviewrendererbuffer.h	\
 	gimpviewrendererdrawable.c	\
 	gimpviewrendererdrawable.h	\
 	gimpviewrenderergradient.c	\
