2004-09-15  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphelp-ids.h: added help IDs for the drawable- and
	vectors-visible and -liked actions as well as for the layer mask
	property action.

	* app/actions/drawable-actions.c
	* app/actions/vectors-actions.c: use them.

	* app/actions/layers-actions.c
	* app/actions/layers-commands.[ch]: ditto. Use
	GIMP_STOCK_TRANSPARENCY for all layer opacity actions. Replaced
	"paint_mode" by "mode" in all action and function/variable names
	because this is the layer mode, not a paint mode.

	* app/actions/channels-commands.c
	* app/actions/layers-commands.c
	* app/actions/vectors-commands.c: set the "activates-default"
	property on the name entry in all "New Foo" and "Edit Foo
	Attributes" dialogs except in the "New Layer" dialog.
	Addresses bug #148026.

	* menus/image-menu.xml.in: added a (commented out) layer
	properties menu containing all the new actions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14734 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -39,7 +39,7 @@
       <menu action="context-colors-menu" name="Colors">
         <menuitem action="context-colors-default" />
         <menuitem action="context-colors-swap" />
-      </menu> 
+      </menu>
       <menu action="context-opacity-menu" name="Opacity">
         <menuitem action="context-opacity-transparent" />
         <menuitem action="context-opacity-opaque" />
@@ -389,6 +389,26 @@
 	<separator />
         <menuitem action="drawable-offset" />
       </menu>
+<!--
+      <menu action="layers-properties-menu" name="Properties">
+        <menuitem action="layers-edit-attributes" />
+        <menu action="layers-opacity-menu" name="Opacity">
+          <menuitem action="layers-opacity-transparent" />
+          <menuitem action="layers-opacity-opaque" />
+          <menuitem action="layers-opacity-decrease" />
+          <menuitem action="layers-opacity-increase" />
+        </menu>
+        <menu action="layers-mode-menu" name="Layer Mode">
+          <menuitem action="layers-mode-first" />
+          <menuitem action="layers-mode-last" />
+          <menuitem action="layers-mode-previous" />
+          <menuitem action="layers-mode-next" />
+        </menu>
+        <menuitem action="drawable-visible" />
+        <menuitem action="drawable-linked" />
+        <menuitem action="layers-preserve-transparency" />
+      </menu>
+-->
       <separator />
       <placeholder name="Resize">
         <menuitem action="layers-resize" />
@@ -400,14 +420,6 @@
       <placeholder name="Crop">
         <menuitem action="layers-crop" />
       </placeholder>
-      <separator />
-<!--
-      <placeholder name="Properties">
-        <menuitem action="drawable-visible" />
-        <menuitem action="drawable-linked" />
-	<menuitem action="layers-preserve-transparency" />
-      </placeholder>
--->
       <separator />
     </menu>
 
