2004-09-19  Sven Neumann  <sven@gimp.org>
	* app/dialogs/Makefile.am (libappdialogs_a_SOURCES): added authors.h.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14764 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/dialogs/Makefile.am
+++ b/app/dialogs/Makefile.am
@@ -11,6 +11,7 @@ libappdialogs_a_SOURCES = \
 	\
 	about-dialog.c			\
 	about-dialog.h			\
+	authors.h			\
 	color-dialog.c			\
 	color-dialog.h			\
 	convert-dialog.c		\
