--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -10,6 +10,7 @@
       </placeholder>
       <placeholder name="Open">
         <menuitem action="file-open-from-image" />
+        <menuitem action="file-open-as-layer" />
         <menuitem action="file-open-location" />
       </placeholder>
       <menu action="file-open-recent-menu" name="Open Recent">
