2004-09-21  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-server.c: enabled build of the
	Script-Fu server for the Win32 platform using the winsock API.

	* plug-ins/script-fu/Makefile.am: link with -lwsock32 on Win32.

	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/siod-wrapper.c: removed Win32 specific code
	that isn't needed any longer.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14794 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/script-fu/Makefile.am
+++ b/plug-ins/script-fu/Makefile.am
@@ -8,6 +8,7 @@ libgimpbase = $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la
 
 if OS_WIN32
 mwindows = -mwindows
+WINSOCK_LIBS = -lwsock32
 endif
 
 AM_LDFLAGS = $(mwindows)
@@ -60,5 +61,6 @@ LDADD = \
 	$(REGEXREPL)						\
 	$(GTK_LIBS)						\
 	$(SOCKET_LIBS)						\
+	$(WINSOCK_LIBS)						\
 	$(RT_LIBS)						\
 	$(INTLLIBS)
