2004-09-22  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/Makefile.am
	* tools/pdbgen/pdb/context.pdb: new files that will hold context
	related PDB functions.

	* tools/pdbgen/groups.pl
	* app/pdb/Makefile.am
	* app/pdb/context_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/progress_cmds.c
	* libgimp/gimp_pdb.h
	* libgimp/gimpcontext_pdb.[ch]: (re)generated.

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-context.[ch]: new files that will hold code
	that implements a context stack in the plug-in's proc-frame.

	* app/plug-in/plug-in.[ch]: new function plug_in_get_proc_frame().

	* app/plug-in/plug-in-message.c
	* app/plug-in/plug-in-progress.c: use the new function instead of
	duplicating it all over the place.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14806 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/pdb/Makefile.am
+++ b/app/pdb/Makefile.am
@@ -11,6 +11,7 @@ libapppdb_a_SOURCES = \
 	brushes_cmds.c		\
 	channel_cmds.c		\
 	color_cmds.c		\
+	context_cmds.c		\
 	convert_cmds.c		\
 	display_cmds.c		\
 	drawable_cmds.c		\
@@ -20,7 +21,7 @@ libapppdb_a_SOURCES = \
 	font_select_cmds.c	\
 	fonts_cmds.c		\
 	gimprc_cmds.c		\
-	gradient_edit_cmds.c \
+	gradient_edit_cmds.c	\
 	gradient_select_cmds.c	\
 	gradients_cmds.c	\
 	guides_cmds.c		\
