--- a/app/plug-in/Makefile.am
+++ b/app/plug-in/Makefile.am
@@ -19,6 +19,8 @@ libappplug_in_a_SOURCES = \
 	plug-in.h		\
 	plug-ins.c		\
 	plug-ins.h		\
+	plug-in-context.c	\
+	plug-in-context.h	\
 	plug-in-debug.c		\
 	plug-in-debug.h		\
 	plug-in-def.c		\
