2004-09-22  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/brushes.pdb: removed the opacity and paint_mode
	functions...

	* tools/pdbgen/pdb/context.pdb: ...and added them here.

	* app/pdb/procedural_db.c: added them to the pdb_compat hash table.

	* libgimp/Makefile.am
	* libgimp/gimpbrushes.[ch]: new files with compat functions
	which call the gimp_context_*() functions.

	* libgimp/gimp.h: changed accordingly.

	* app/pdb/brushes_cmds.c
	* app/pdb/context_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpbrushes_pdb.[ch]
	* libgimp/gimpcontext_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14813 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -163,6 +163,8 @@ libgimp_2_0_la_SOURCES = \
 	gimptypes.h		\
 	${PDB_WRAPPERS_C}	\
 	${PDB_WRAPPERS_H}	\
+	gimpbrushes.c		\
+	gimpbrushes.h		\
 	gimpbrushselect.c	\
 	gimpbrushselect.h	\
 	gimpchannel.c		\
@@ -238,6 +240,7 @@ gimpinclude_HEADERS = \
 	gimpcompat.h		\
 	gimptypes.h		\
 	${PDB_WRAPPERS_H}	\
+	gimpbrushes.h		\
 	gimpbrushselect.h	\
 	gimpchannel.h		\
 	gimpdrawable.h		\
